src/test/resources/plang-strict/passing/013_arrays.plang
**#Arrays
**Memory:a=Array(Integer(1),DEADBEEF,Integer(1),Integer(5)),c=Integer(3)
Program testing
  Változók:
    a: Egész[4],
    c: Egész

  c := 1
  a[0] := 1
  a[2] := c
  c := 3
  a[c] := 5
program_vége
